Increase permgen to get tests to run on Java6 on Mac
Conflicts:
	systests/jaxrs/pom.xml